--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.0",
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"nodemon": "^2.0.15"
 	},
 	"repository": {
 		"type": "git",
